--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "eh-login",
-  "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
@@ -16,18 +15,12 @@
     "lightningcss": "^1.30.1",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.7.2",
-    "vite": "npm:rolldown-vite@^7.0.12",
-    "vite-plugin-monkey": "^6.0.1"
+    "vite": "latest",
+    "vite-plugin-monkey": "^6.0.1",
+    "vue-tsc": "^3.0.5"
   },
   "dependencies": {
     "vue": "^3.5.18",
     "vue-qrcode": "^2.2.2"
-  },
-  "pnpm": {
-    "overrides": {
-      "vite": "npm:rolldown-vite@latest"
-    },
-    "onlyBuiltDependencies": [
-    ]
   }
 }
